# tttc_practice

plugins/src/: CMakeLists.txt  PrintTypeInfo.cpp
plugins/tests/: test.cpp
